[project]
name = "browser-use-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
]
